--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": " shopping-list",
+  "name": "shopping-list",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json": "npx json-server src/db.json"
   },
   "dependencies": {
+    "axios": "^1.7.1",
+    "json-server": "^1.0.0-beta.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
